--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div class="inner">
 
 <header>
-  <h1>Your proyect name here</h1>
-  <h2>Brief description of what your project does</h2>
+  <h1>nimrod-bloom</h1>
+  <h2>Bloom filter in Nimrod</h2>
 </header>
 
 <section id="downloads" class="clearfix">
